feat: introduce ability to return warnings as push results; return error on same timestamp conflict
