# internal/app/http/server/models.gen.go
@@ -107,7 +107,8 @@ type PushThingModelResponse struct {
 
 // PushThingModelResult defines model for PushThingModelResult.
 type PushThingModelResult struct {
-	TmID string `json:"tmID"`
+	TmID    string  `json:"tmID"`
+	Warning *string `json:"warning,omitempty"`
 }
 
 // SchemaAuthor defines model for SchemaAuthor.
@@ -210,6 +211,15 @@ type GetMpnsParams struct {
 
 // PushThingModelJSONBody defines parameters for PushThingModel.
 type PushThingModelJSONBody = map[string]interface{}
+
+// PushThingModelParams defines parameters for PushThingModel.
+type PushThingModelParams struct {
+	// Force flag to force the push, ignoring any conflicts with existing TMs
+	Force *string `form:"force,omitempty" json:"force,omitempty"`
+
+	// OptPath optional path parts to append to the target path (and id) of imported TM, after the mandatory path structure
+	OptPath *string `form:"optPath,omitempty" json:"optPath,omitempty"`
+}
 
 // DeleteThingModelByIdParams defines parameters for DeleteThingModelById.
 type DeleteThingModelByIdParams struct {
